[gd_scene load_steps=3 format=3 uid="uid://c67l7qk2y6v4c"]

[ext_resource type="LabelSettings" uid="uid://be08mibatmh5l" path="res://assets/LG_48_Red.tres" id="1_i7ch1"]
[ext_resource type="Script" path="res://hud/hud.gd" id="1_o6p7p"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6p7p")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScoreLabel" type="Label" parent="MC"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "000"
label_settings = ExtResource("1_i7ch1")

[node name="MC2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 180

[node name="MessageLabel" type="Label" parent="MC2"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Good job!"
label_settings = ExtResource("1_i7ch1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
